<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/verBoletos"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteText"
            android:background="@color/mainButtons"
            android:onClick="onViewTickets"
            android:text="@string/ver_boletos"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/añadirboleto"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteText"
            android:background="@color/mainButtons"
            android:onClick="onCreateTicket"
            android:text="@string/anadir_boleto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cuenta"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainButtons"
            android:textColor="@color/whiteText"
            android:text="@string/sacar_cuentas"
            android:onClick="onCalculateTickets"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    </LinearLayout>

</LinearLayout>